--- a/source/.recommenders/caches/identified-project-coordinates.json
+++ b/source/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\IT_Programming\\MyProject\\MyWeb02\\source\\waxingShop","type":"PROJECT","hints":{"PROJECT_NAME":"waxingShop"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_144","type":"JRE","hints":{}},"jre:jre:1.8.0"]]
